tests/rosetta/out/Smalltalk/animation.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| msg shift inc clicks frames line i idx |
msg := 'Hello World! '.
shift := 0.
inc := 1.
clicks := 0.
frames := 0.
[(clicks < 5)] whileTrue: [.
line := ''.
i := 0.
[(i < 13)] whileTrue: [.
idx := (((shift + i)) % 13).
line := (line + (msg copyFrom: (idx + 1) to: (idx + 1))).
i := (i + 1).
].
.
Transcript show: (line) printString; cr.
shift := (((shift + inc)) % 13).
frames := (frames + 1).
((((frames % 13)) = 0)) ifTrue: [
inc := (13 - inc).
clicks := (clicks + 1).
] .
].
.
